Changed my mind on the read story button

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -298,6 +298,7 @@ td:nth-of-type(4) {
 
   .newsstoryactionread {
     border-radius: 50px;
+    margin-left: 10px;
     padding-left: 12px;
     padding-right: 12px;
     height: 28px;
