--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -208,12 +208,14 @@ td:nth-of-type(4) {
 }
 
 .authortag {
+  z-index: -10;
+  margin-left: -50px;
   background-color: $brand-primary;
   color: #2b9c4d;
-  padding: 6px;
-  padding-left: 10px;
+  padding: 10px;
+  padding-left: 30px;
   padding-right: 10px;
-  text-align: center;
+  text-align: left;
   border-radius: 15px;
   flex: 1;
 }
